adds survey description

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="row">
                 <h1 style="margin:0;">Core Beliefs Inventory Online</h1>                
                 <h4 style="margin-top: 0; color: #aaaaaa">Based on <a target="_blank" href="https://www.amazon.com/Prisoners-Belief-Exposing-Changing-Beliefs/dp/1879237040?&_encoding=UTF8&tag=skidvis06-20&linkCode=ur2&linkId=1b58f4e70db65d63483d13aa2e1236d1&camp=1789&creative=9325">Prisoners of Belief</a> by Matthew McKay, Ph.D. and Patrick Fanning</h4>
+                <p>Complete the survey below for more insite into your core beliefs; the lens through which you view yourself and the world.</p>
             </div>            
         </div>
         <div class="container" v-if="current && !results">
