adds proper url

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             </div>
             <div class="row">
                 <div class="col-12" style="background-color: #eee;">
-                    <div v-bind:style="{'background-color': 'green', width: (currentId + 1) + '%'}">&nbsp;</div>
+                    <div v-bind:style="{'background-color': 'green', width: (currentId + 1) + '%'}">&nbsp;</div>                    
                 </div>
+                <div style="text-align: center; color: #aaa;">^-PROGRESS-^</div>
             </div>            
         </div>
 
