--- a/index.html
+++ b/index.html
@@ -52,13 +52,15 @@
         <div class="container" v-if="results">
             <div class="row">
                 <h1 class="col-6">Results</h1>
-                <div class="col-6" style="text-align: right;" v-if="tinyurl">Share your results: {{tinyurl}}</div>
+                <div class="col-6" style="text-align: right;" v-if="tinyurl">Share your results: <input type="text" v-model="tinyurl" id="tinyurl"> &nbsp;<button v-on:click="CopyUrl">{{buttonText}}</button></div>
             </div>            
             <div class="row" v-for="group in groups">
                 <h3 style="text-transform: capitalize; color:#444; background-color: #eee; padding-left: 10px; border-radius: 5px; margin: 0;">{{group.name}}</h3>
                 <div class="col-10">Agreement with the statement: <b><i>"{{group.desc}}"</i></b></div>
                 <div class="col-2" style="text-align: right;">Your score: <h4 style="display: inline; margin:0; padding: 5px; vertical-align: top;" v-bind:style="GetColor(group.score)">{{group.score}}</h4></div>
-            </div>            
+            </div>  
+            <br />
+            <br />          
         </div>
     </div>
     <script src="index.js"></script>
