rewords link share text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container" v-if="results">
             <div class="row">
                 <h1 class="col-6">Results</h1>
-                <div class="col-6" style="text-align: right;" v-if="tinyurl">Share your results: <input type="text" v-model="tinyurl" id="tinyurl"> &nbsp;<button v-on:click="CopyUrl">{{buttonText}}</button></div>
+                <div class="col-6" style="text-align: right;" v-if="tinyurl"><input type="text" v-model="tinyurl" id="tinyurl"> &nbsp;<button v-on:click="CopyUrl">{{buttonText}}</button><br />Save/Share your results!</div>
             </div>            
             <div class="row" v-for="group in groups">
                 <h3 style="text-transform: capitalize; color:#444; background-color: #eee; padding-left: 10px; border-radius: 5px; margin: 0;">{{group.name}}</h3>
