adds restart link

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
             </div>  
             <br />
             <br />          
+            <div class="row">
+                <div class="col-12" style="text-align: center;"><a href="/">Start Over?</a></div>
+                <br /><br />
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
