fixes buttons on mobile

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <h3 class="col-12" style="text-align: center; min-height: 70px; background-color: #eee; border-radius: 5px;">{{current.q}}</h3>         
             </div>
             <div class="row">
-                <div class="col-6" style="text-align: right;">
+                <div class="col-6-sm" style="text-align: right;">
                     <input type="radio" name="true" id="true" v-model="current.value" value="true" v-on:change="RadioSelected">
                     <label for="true">TRUE</label>
                 </div>
-                <div class="col-6">
+                <div class="col-6-sm">
                     <input type="radio" name="false" id="false" v-model="current.value" value="false" v-on:change="RadioSelected">
                     <label for="false">FALSE</label>
                 </div>
