--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="base64.js"></script>
     <link rel="stylesheet" href="simple-grid.min.css" />
 
+    <meta property="og:title" content="Core Beliefs Inventory Online Survey" />
+    <meta property="og:description" content="Learn how you see yourself and the world around you." />
+    <meta property="og:url" content="http://www.corebeliefsurvey.com" />
+    <meta property="og:site_name" content="Core Belief Inventory Online" />
+
+    <meta name="twitter:title" content="Core Belief Inventory Online">
+    <meta name="twitter:description" content="Learn how you see yourself and the world around you.">
+    <meta name="twitter:site" content="@skidvis">
+    <meta name="twitter:creator" content="@skidvis">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-K4JPFFNTBH"></script>
     <script>
