--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:title" content="Core Beliefs Inventory Online Survey" />
     <meta property="og:description" content="Learn how you see yourself and the world around you." />
     <meta property="og:url" content="http://www.corebeliefsurvey.com" />
-    <meta property="og:site_name" content="Core Belief Inventory Online" />
+    <meta property="og:site_name" content="Core Beliefs Inventory Online" />
 
-    <meta name="twitter:title" content="Core Belief Inventory Online">
+    <meta name="twitter:title" content="Core Beliefs Inventory Online">
     <meta name="twitter:description" content="Learn how you see yourself and the world around you.">
     <meta name="twitter:site" content="@skidvis">
     <meta name="twitter:creator" content="@skidvis">
